Add minor changes

--- a/src/workshops/1/content.tex
+++ b/src/workshops/1/content.tex
@@ -1,11 +1,10 @@
-\section{Delopgave 1}\label{sec:delopgave-1}
+\section{Workshop 1}\label{sec:workshop-1}
 
-\import{./sections/}{delopgave-1.tex}
+\import{./sections/}{subtask-1.tex}
 
+\subsection{Delopgave 2}\label{subsec:delopgave-2}
 
-\section{Delopgave 2}\label{sec:delopgave-2}
-
-\subsection{Hvad svarer de to muligheder til?}\label{subsec:hvad-svarer-de-to-muligheder-til?}
+\subsubsection{Hvad svarer de to muligheder til?}\label{subsubsec:hvad-svarer-de-to-muligheder-til?}
 
 \subsubsection*{Mulighed 1}
 Mulighed 1 er en sammensætning af potensrelationer.
@@ -22,7 +21,7 @@ Fordi \(R\) er refleksiv, kan vi danne en sammensætning af \(R\)
 \subsubsection*{Mulighed 2}
 Transitiv aflukning, fordi vi laver sammensætninger af alle potenser af relationen.
 
-\subsection{Hvilken aflukning er der tale om?}\label{subsec:hvilken-aflukning-er-der-tale-om?}
+\subsubsection{Hvilken aflukning er der tale om?}
 Der er tale om en transitiv aflukning, som kan beskrives på følgende måde:
 
 \begin{equation}
@@ -32,10 +31,9 @@ Der er tale om en transitiv aflukning, som kan beskrives på følgende måde:
 Men reelt set kan man også beskrive aflukningen som \(S = R^{3}\) fordi \(R^4\) ikke tilføjer nye par til
 relationen, osv.
 
+\subsection{Delopgave 3}\label{subsec:delopgave-3}
 
-\section{Delopgave 3}\label{sec:delopgave-3}
-
-\subsection{Hvilke elementer indholder mængderne?}\label{subsec:hvilke-elementer-indholder-mngderne?}
+\subsubsection{Hvilke elementer indholder mængderne?}
 
 Mængden \(F_{\text{Tom}}\) er en mængde bestående af elementer \(a\), som er alle elementer i par i \(S\), som
 \(\text{Tom}\) har en forbindelse til:
@@ -61,9 +59,7 @@ og indholder alle elementer som \(F_{\text{Tom}}\) og \(F_{\text{Noa}}\) har til
     \label{eq:equation10}
 \end{equation}
 
-\subsection{Vis, at \(G_{\text{Tom}} \subseteq G_{\text{Tom}}\)}
-\label{subsec:vis-at-(g_{text{tom}}-subseteq-g_{text{tom}})}
-
+\subsubsection{Vis, at \(G_{\text{Tom}} \subseteq G_{\text{Tom}}\)}
 
 Lad \(B \subseteq A, G_{\text{Tom}} = \{\,b \in B \mid (b, \text{Tom}) \in S\,\}\label{eq:equation11}\).
 Lad \(p \in G_{\text{Tom}} \implies p \in B \implies \textcolor{purple}{p \in A}\).
