--- a/src/workshops/1/sections/subtask-1.tex
+++ b/src/workshops/1/sections/subtask-1.tex
@@ -1,4 +1,6 @@
-\subsection{Relationen \(R\)}\label{subsec:relationen-(r)}
+\subsection{Delopgave 1}\label{subsec:delopgave-1}
+
+\subsubsection{Relationen \(R\)}
 
 Den følgende graf
 
@@ -45,7 +47,7 @@ kan også beskrives som relationen \(R\):
     \end{split}\label{eq:equation}
 \end{equation}
 
-\subsection{Kardinaliteten af relationen \(R\)}\label{subsec:kardinaliteten-af-relationen-(r)}
+\subsubsection{Kardinaliteten af relationen \(R\)}
 
 Kardinaliteten af relationen \(R\) er:
 
@@ -53,7 +55,7 @@ Kardinaliteten af relationen \(R\) er:
     |R| = 15\label{eq:equation5}
 \end{equation}
 
-\subsection{\(R\) er en delmængde af et kartesisk product}\label{subsec:(r)-er-en-delmngde-af-et-kartesisk-product}
+\subsubsection{\(R\) er en delmængde af et kartesisk produkt}
 
 Lad \(R\) være en relation og \(A = \{\text{Mia}, \text{Liv}, \text{Noa}, \text{Gry}, \text{Kim}, \text{Bob},
 \text{Tom}\}\).
@@ -71,7 +73,7 @@ Kardinaliteten af det nævnte kartesiske produkt kan beregnes på følgende måd
     | A \times A | = 49\label{eq:equation4}
 \end{equation}
 
-\subsection{Relationens egenskaber}\label{subsec:relationens-egenskaber}
+\subsubsection{Relationens egenskaber}
 
 Relationen \(R\) har følgende egenskaber:
 
