--- a/src/main.tex
+++ b/src/main.tex
@@ -1,5 +1,5 @@
 % Preamble
-\documentclass[11pt]{book}
+\documentclass[11pt]{article}
 
 % Packages
 \usepackage[danish]{babel}
@@ -14,8 +14,8 @@
 \begin{document}
     \maketitle
 
+    \tableofcontents
 
-    \chapter{Workshop 1}\label{ch:workshop-1}
 
     \import{workshops/1/}{content}
 \end{document}
