Add an edit to content.tex, update the IDE config

--- a/src/workshops/1/content.tex
+++ b/src/workshops/1/content.tex
@@ -7,7 +7,7 @@
 \subsubsection{Hvad svarer de to muligheder til?}\label{subsubsec:hvad-svarer-de-to-muligheder-til?}
 
 \subsubsection*{Mulighed 1}
-Mulighed 1 er en sammensætning af potensrelationer.
+Mulighed 1 er en sammensætning af potensrelationer. SImon was here!
 
 \begin{equation}
     \begin{split}
