Change the document class to book, correct the section nesting, make minor corrections

--- a/src/workshops/1/content.tex
+++ b/src/workshops/1/content.tex
@@ -1,13 +1,15 @@
-\section{Workshop 1}\label{sec:workshop-1}
+\chapter{Workshop 1}\label{ch:workshop-1}
 
 \import{./sections/}{subtask-1.tex}
 
-\subsection{Delopgave 2}\label{subsec:delopgave-2}
 
-\subsubsection{Hvad svarer de to muligheder til?}\label{subsubsec:hvad-svarer-de-to-muligheder-til?}
+\section{Delopgave 2}\label{sec:delopgave-2}
 
-\subsubsection*{Mulighed 1}
-Mulighed 1 er en sammensætning af potensrelationer. SImon was here!
+\subsection{Hvad svarer de to muligheder til?}\label{subsec:hvad-svarer-de-to-muligheder-til?}
+
+\subsection*{Mulighed 1}
+
+Mulighed 1 er en sammensætning af potensrelationer.
 
 \begin{equation}
     \begin{split}
@@ -18,10 +20,10 @@ Mulighed 1 er en sammensætning af potensrelationer. SImon was here!
 
 Fordi \(R\) er refleksiv, kan vi danne en sammensætning af \(R\)
 
-\subsubsection*{Mulighed 2}
+\subsection*{Mulighed 2}
 Transitiv aflukning, fordi vi laver sammensætninger af alle potenser af relationen.
 
-\subsubsection{Hvilken aflukning er der tale om?}
+\subsection{Hvilken aflukning er der tale om?}\label{subsec:hvilken-aflukning-er-der-tale-om?}
 Der er tale om en transitiv aflukning, som kan beskrives på følgende måde:
 
 \begin{equation}
@@ -31,9 +33,10 @@ Der er tale om en transitiv aflukning, som kan beskrives på følgende måde:
 Men reelt set kan man også beskrive aflukningen som \(S = R^{3}\) fordi \(R^4\) ikke tilføjer nye par til
 relationen, osv.
 
-\subsection{Delopgave 3}\label{subsec:delopgave-3}
 
-\subsubsection{Hvilke elementer indholder mængderne?}
+\section{Delopgave 3}\label{sec:delopgave-3}
+
+\subsection{Hvilke elementer indholder mængderne?}\label{subsec:hvilke-elementer-indholder-mngderne?}
 
 Mængden \(F_{\text{Tom}}\) er en mængde bestående af elementer \(a\), som er alle elementer i par i \(S\), som
 \(\text{Tom}\) har en forbindelse til:
@@ -59,7 +62,8 @@ og indholder alle elementer som \(F_{\text{Tom}}\) og \(F_{\text{Noa}}\) har til
     \label{eq:equation10}
 \end{equation}
 
-\subsubsection{Vis, at \(G_{\text{Tom}} \subseteq G_{\text{Tom}}\)}
+\subsection{Vis, at \(G_{\text{Tom}} \subseteq G_{\text{Tom}}\)}
+\label{subsec:vis-at-(g_{text{tom}}-subseteq-g_{text{tom}})}
 
 Lad \(B \subseteq A, G_{\text{Tom}} = \{\,b \in B \mid (b, \text{Tom}) \in S\,\}\label{eq:equation11}\).
 Lad \(p \in G_{\text{Tom}} \implies p \in B \implies \textcolor{purple}{p \in A}\).
