--- a/src/workshops/1/sections/subtask-1.tex
+++ b/src/workshops/1/sections/subtask-1.tex
@@ -1,6 +1,6 @@
-\subsection{Delopgave 1}\label{subsec:delopgave-1}
+\section{Delopgave 1}\label{sec:delopgave-1}
 
-\subsubsection{Relationen \(R\)}
+\subsection{Relationen \(R\)}\label{subsec:relationen-(r)}
 
 Den følgende graf
 
@@ -47,7 +47,7 @@ kan også beskrives som relationen \(R\):
     \end{split}\label{eq:equation}
 \end{equation}
 
-\subsubsection{Kardinaliteten af relationen \(R\)}
+\subsection{Kardinaliteten af relationen \(R\)}\label{subsec:kardinaliteten-af-relationen-(r)}
 
 Kardinaliteten af relationen \(R\) er:
 
@@ -55,7 +55,7 @@ Kardinaliteten af relationen \(R\) er:
     |R| = 15\label{eq:equation5}
 \end{equation}
 
-\subsubsection{\(R\) er en delmængde af et kartesisk produkt}
+\subsection{\(R\) er en delmængde af et kartesisk produkt}\label{subsec:(r)-er-en-delmngde-af-et-kartesisk-produkt}
 
 Lad \(R\) være en relation og \(A = \{\text{Mia}, \text{Liv}, \text{Noa}, \text{Gry}, \text{Kim}, \text{Bob},
 \text{Tom}\}\).
@@ -73,7 +73,7 @@ Kardinaliteten af det nævnte kartesiske produkt kan beregnes på følgende måd
     | A \times A | = 49\label{eq:equation4}
 \end{equation}
 
-\subsubsection{Relationens egenskaber}
+\subsection{Relationens egenskaber}\label{subsec:relationens-egenskaber}
 
 Relationen \(R\) har følgende egenskaber:
 
