Add additional whitespace to relation R in subtask-1.tex

--- a/src/workshops/1/sections/subtask-1.tex
+++ b/src/workshops/1/sections/subtask-1.tex
@@ -39,11 +39,11 @@ kan også beskrives som relationen \(R\):
 
 \begin{equation}
     \begin{split}
-        R =\{(\text{Mia}, \text{Mia}), &(\text{Mia}, \text{Bob}), (\text{Mia}, \text{Liv}), (\text{Tom},
+        R =\{\,(\text{Mia}, \text{Mia}), &(\text{Mia}, \text{Bob}), (\text{Mia}, \text{Liv}), (\text{Tom},
         \text{Tom}),\\
         (\text{Bob}, \text{Bob}), & (\text{Kim}, \text{Kim}), (\text{Kim}, \text{Gry}), (\text{Gry}, \text{Gry}), \\
         (\text{Gry}, \text{Tom}), &(\text{Gry}, \text{Liv}), (\text{Noa}, \text{Noa}),(\text{Noa}, \text{Tom}), \\
-        (\text{Liv}, \text{Liv}), &(\text{Liv}, \text{Tom}), (\text{Liv}, \text{Noa})\}
+        (\text{Liv}, \text{Liv}), &(\text{Liv}, \text{Tom}), (\text{Liv}, \text{Noa})\,\}
     \end{split}\label{eq:equation}
 \end{equation}
 
