--- a/src/workshops/1/content.tex
+++ b/src/workshops/1/content.tex
@@ -1,6 +1,6 @@
 \chapter{Workshop 1}\label{ch:workshop-1}
 
-\import{./sections/}{subtask-1.tex}
+\input{workshops/1/sections/subtask-1}
 
 
 \section{Delopgave 2}\label{sec:delopgave-2}
