Add TeXtidote ignores

--- a/src/workshops/1/sections/subtask-1.tex
+++ b/src/workshops/1/sections/subtask-1.tex
@@ -4,6 +4,7 @@
 
 Den følgende graf
 
+% textidote: ignore begin
 \begin{center}
     \begin{tikzpicture}
         \node [draw,circle] (Tom) at (0, 0) {Tom};
@@ -34,6 +35,7 @@ Den følgende graf
         \draw[->] (Liv) -- (Noa);
     \end{tikzpicture}
 \end{center}
+% textidote: ignore end
 
 kan også beskrives som relationen \(R\):
 
