--- a/src/workshops/2/sections/subtask-3.tex
+++ b/src/workshops/2/sections/subtask-3.tex
@@ -1,1 +1,14 @@
 \section{Delopgave 3}\label{sec:delopgave-32}
+
+\subsection{Udledningen af kompleksiteten}\label{subsec:udledningen-af-kompleksiteten}
+
+Kompleksiteten er det inverse af en eksponentialfunktion.
+
+Hver gang vi itererer, halverer vi samtidigt
+
+\subsection{I hvilket tilfælde vil vi lave flest sammenligninger i LinSearch?}
+\label{subsec:i-hvilket-tilflde-vil-vi-lave-flest-sammenligninger-i-linsearch?}
+
+Worst case: Elementet findes ikke
+
+Best case:
