--- a/src/workshops/2/sections/subtask-1.tex
+++ b/src/workshops/2/sections/subtask-1.tex
@@ -1,5 +1,7 @@
 \section{Delopgave 1}\label{sec:delopgave-12}
 
+\subsection{Hvorfor er \(f\) ikke en matematisk funktion?}\label{subsec:hvorfor-er-(f)-ikke-en-matematisk-funktion?}
+
 Funktionen for \(f\) kan beskrives sådan:
 
 \begin{equation}
@@ -14,3 +16,14 @@ i \(A\).
 Hvis vi bruger den definition på den givne array \(\left(3, 4, 4, 5\right)\) observerer vi at ved \(f(4)\) vil få to
 værdier for \(f(x)\) nemlig \(f(4) = 1 \wedge 2\), men dette bryder definition ovenfor og derfor er det ikke en
 funktion.
+
+\subsection{Er \(f\) injektiv, surjektiv eller bijektiv?}\label{subsec:er-(f)-injektiv-surjektiv-eller-bijektiv?}
+
+Funktionen er ikke injektiv fordi at, ud fra defininition fra injektivitet må \( f: A \rightarrow B \) maks antage en
+værdi når den går fra \(A\) til \(B\), men når vi kigger efter værdier ude fra mængden vil funktionen antage værdien
+\(0\).
+
+Dette udelukker også at den er bijektiv da det kræver at den både er, surjektiv og injektiv.
+
+Surjektivitet er defineret ved at funktionen mindst skal antage en værdi for alle A til B\@.
+Det opfylder funktionen da vi har at hvis ikke \(A_{i}\) eksisterer i mængden antager værdien \(0\).
