Add more TeXtidote ignores

--- a/src/workshops/2/sections/subtask-2.tex
+++ b/src/workshops/2/sections/subtask-2.tex
@@ -2,7 +2,9 @@
 
 \subsection{Implementering af søgningsalgoritmer}\label{subsec:implementering-af-sgningsalgoritmer}
 
+% textidote: ignore begin
 Tilføj følgende kodeuddrag til funktionen \lstinline{LinSearch} i \lstinline{SearchFunc.c}:
+% textidote: ignore end
 
 \begin{lstlisting}[language=C, label={lst:lstlisting-lin}]
 ...
@@ -17,7 +19,9 @@ if (i > n) {
 ...
 \end{lstlisting}
 
+% textidote: ignore begin
 Tilføj følgende kodeuddrag til funktionen \lstinline{BinSearch} i \lstinline{SearchFunc.c}:
+% textidote: ignore end
 
 \begin{lstlisting}[language=C, label={lst:lstlisting-bin}]
 ...
