Update CLion configuration, add content to workshop 2

--- a/src/main.tex
+++ b/src/main.tex
@@ -9,6 +9,7 @@
 \usepackage[indent=20pt]{parskip}
 \usepackage{hyperref}
 \usepackage{listings}
+\usepackage{icomma}
 
 % textidote: ignore begin
 \hypersetup{pdfborder=0 0 0}
