Disable command is not defined inspection, update workshop 2 structure

--- a/src/workshops/2/sections/subtask-3.tex
+++ b/src/workshops/2/sections/subtask-3.tex
@@ -17,6 +17,8 @@ Best case:
 \subsection{Vis, at \textsc{LinSearch} er \(\Theta(n)\) og \textsc{BinSearch} \(\Theta(\log(n))\)}
 \label{subsec:vis-at-linsearch-er-theta-n-og-binsearch-theta-log-n}
 
+\subsubsection{\textsc{LinSearch}}
+
 \begin{equation}
     \begin{aligned}
         | f(x) | & \leq C | g(x) | \\
@@ -32,6 +34,8 @@ Best case:
         | 2n + 2 | & > n
     \end{aligned}\label{eq:equation14}
 \end{equation}
+
+\subsubsection{\textsc{BinSearch}}
 
 \subsection{Sammenligning af den teoretiske og den praktiske kompleksitet}
 \label{subsec:sammenligning-af-den-teoretiske-og-den-praktiske-kompleksitet}
