--- a/src/workshops/2/sections/subtask-1.tex
+++ b/src/workshops/2/sections/subtask-1.tex
@@ -1,31 +1,29 @@
-\section{Opgave 1}\label{sec:opgave-1}
+\section{Delopgave 1}\label{sec:delopgave-12}
 
-\subsection {Delopgave 1}\label{subsec:delopgave-2-1}
+\subsection{Hvorfor er \(f\) ikke en matematisk funktion?}\label{subsec:hvorfor-er-(f)-ikke-en-matematisk-funktion?}
 
-Funktionen for f kan beskrives sådan:
+Funktionen for \(f\) kan beskrives sådan:
 
 \begin{equation}
-    \label{eq:1}
     f((a_{1}, a_{2}, a_{3} \dots a_{n}), x)
-\end {equation}
+    \label{eq:equation12}
+\end{equation}
 
-Det betyder at det array-funktionen returnerer er indexet som $x$ eksisterer på.
-Definitionen af en funktion lyder: $f: A \rightarrow B $ er en tildeling af præcis et element i B
-for hvert element i A\@.
+Det betyder at det array-funktionen returnerer er indexet som \(x\) eksisterer på.
+Definitionen af en funktion lyder: \(f: A \rightarrow B\) er en tildeling af præcis et element i \(B\) for hvert element
+i \(A\).
 
 Hvis vi bruger den definition på den givne array \(\left(3, 4, 4, 5\right)\) observerer vi at ved \(f(4)\) vil få to
 værdier for \(f(x)\) nemlig \(f(4) = 1 \wedge 2\), men dette bryder definition ovenfor og derfor er det ikke en
 funktion.
 
-\subsection{Delopgave 2}\label{subsec:delopgave-22}
+\subsection{Er \(f\) injektiv, surjektiv eller bijektiv?}\label{subsec:er-(f)-injektiv-surjektiv-eller-bijektiv?}
 
-Funktionen er ikke injektiv fordi at, ud fra defininition fra injektivitet må
-\( f: A \rightarrow B \)maks antage en værdi når den går fra A til B, men når vi kigger efter værdier
-ude fra mængden vil funktionen antage værdien 0.
+Funktionen er ikke injektiv fordi at, ud fra defininition fra injektivitet må \( f: A \rightarrow B \) maks antage en
+værdi når den går fra \(A\) til \(B\), men når vi kigger efter værdier ude fra mængden vil funktionen antage værdien
+\(0\).
 
 Dette udelukker også at den er bijektiv da det kræver at den både er, surjektiv og injektiv.
 
 Surjektivitet er defineret ved at funktionen mindst skal antage en værdi for alle A til B\@.
-Det opfylder funktionen da vi har at hvis ikke\(A_{i}\)eksisterer i mængden antager værdien 0.
-
-
+Det opfylder funktionen da vi har at hvis ikke \(A_{i}\) eksisterer i mængden antager værdien \(0\).
