Add content to sections 2 and 3

--- a/src/workshops/3/content.tex
+++ b/src/workshops/3/content.tex
@@ -1,3 +1,5 @@
 \chapter{Workshop 3}\label{ch:workshop-3}
 
 \input{workshops/3/sections/subtask-1}
+\input{workshops/3/sections/subtask-2}
+\input{workshops/3/sections/subtask-3}
