--- a/src/workshops/3/sections/subtask-3.tex
+++ b/src/workshops/3/sections/subtask-3.tex
@@ -2,30 +2,84 @@
 
 \subsection{\textsc{Merge} med \(m + n - 1\) sammenligninger}\label{subsec:merge-med-m-+-n-1-sammenligninger}
 
-\subsubsection{Grundtilfælde (k = 0)}
-For \(k = 0\), \(n = 2^0 = 1\).
-For \(n = 1\) element er ingen sammenligninger nødvendige, da et enkelt element allerede er sorteret (trivielt
-sorteret liste).
+\subsubsection{Basistrin (k = 0)}
 
-\subsubsection{Induktivt trin}
-Antag at formlen gælder for \(k = p\).
-Lad os bevise den for \(k = p + 1\).
+Lad \(k = 0\), \(n = 2^0 = 1\).
+Når \(n = 1\) element er kun én sammenligning nødvendig, nemlig \lstinline{l < r}.
 
-- For \(k = p\), \(n = 2^p\) elementer, og Mergesort bruger \(n(\log_2(n) + 1) = 2^p(p + 1)\) sammenligninger.
-- For \(k = p + 1\), \(n = 2^{p+1} = 2 \times 2^p\) elementer.
+\begin{equation}
+    P: 2^k(k + 1) = 2^0(0 + 1) = 1
+    \label{eq:equation18}
+\end{equation}
 
-Ved brug af formlen for antallet af sammenligninger for to lister med længder \(m\) og \(n\) (hvor \(m\) og \(n\)
-begge er \(2^p\)):
+\subsubsection{Induktionstrin}
 
-For to lister med længder \(2^p\) og \(2^p\) (fordi \(2 \times 2^p = 2^{p+1}\)):
+Lad os bevise den for \(k \rightarrow k + 1\).
 
-Antal sammenligninger = \(2^p + 2^p - 1 = 2 \times 2^p - 1 = 2^{p+1} - 1\).
+\(n = 2^{k + 1} = 2 \cdot 2^k\).
 
-For \(k = p + 1\) bruger Mergesort \(2^{p+1} \times ((p+1) + 1) = 2^{p+1}(p+2)\) sammenligninger.
+Vi deler listen i to dele, men fordi listens længde altid er potenser af \(2\), kommer dellisterne altid have samme
+længde på hver side af træet.
 
-\subsubsection{Konklusion}
-- Grundtilfælde (k = 0) er sandt: \(2^0(0 + 1) = 1(1) = 1\) sammenligning.
-- Det induktive trin er sandt for \(k = p + 1\) under antagelse af, at det gælder for \(k = p\).
+Ifølge induktionshypotesen har \textsc{MergeSort} \(2^k(k + 1)\) sammenligninger på en delliste med længde \(l = 2^k\).
+\textsc{Merge} har \(2^k + 2^k - 1\) sammenligninger.
 
-Dette fuldender induktionsbeviset og viser, at Mergesort bruger præcis \(n(\log_2(n) + 1) = 2^k(k + 1)\)
-sammenligninger for en inputliste \(L\) med \(n = 2^k\) elementer.
+\begin{equation}
+    \begin{aligned}
+        S_{k + 1} & = 1 + 2^k(k + 1) + 2^k(k + 1) + 2^k + 2^k - 1 \\
+        & = 2^k(k + 1) + 2^k(k + 1) + 2^k + 2^k \\
+        & = 2 \cdot 2^k(k + 1) + 2 \cdot 2^k \\
+        & = 2^{k + 1}(k + 1) + 2^{k + 1} \\
+        & = 2^{k + 1}(k + 2)
+    \end{aligned}
+    \label{eq:equation19}
+\end{equation}
+
+\subsection{\textsc{MergeSort} bruger mindre end \(2n\log_2(n)\) sammenligninger}
+\label{subsec:merge-sort-bruger-mindre-end-sammenligninger}
+
+\subsubsection{Basistrin (k = 0)}
+
+Hvis \(n = 2\) bruger \textsc{MergeSort} \(4\) sammenligninger.
+
+\begin{equation}
+    \begin{aligned}
+        2n\log_2(n) = 2 \cdot 2\log_2(2) = 4
+    \end{aligned}
+    \label{eq:equation20}
+\end{equation}
+
+Hvis \(n = 3\) bruger \textsc{MergeSort} \(8\) sammenligninger.
+
+\begin{equation}
+    \begin{aligned}
+        2n\log_2(n) = 2 \cdot 3\log_2(3) \approx 6 \cdot 1,585 = 9,51
+    \end{aligned}
+    \label{eq:equation21}
+\end{equation}
+
+Fordi \(8 \leq 9,51\) passer vores basistrin.
+
+\subsubsection{Induktionstrin}
+
+Lad os bevise den for \(n \rightarrow n + 1\).
+
+\begin{equation}
+    \begin{aligned}
+        S_{n + 1} & = 1 + 2 \left\lfloor \frac{n + 1}{2} \right\rfloor \log_2\left( \left\lfloor \frac{n + 1}{2}
+        \right\rfloor \right) + 2 \left\lceil \frac{n + 1}{2} \right\rceil \log_2\left( \left\lceil \frac{n + 1}{2}
+        \right\rceil \right) n + 1 - 1 \\
+        & \leq n + 1 + 2 \log_2\left( \left\lceil \frac{n + 1}{2} \right\rceil \right)\left( \left\lfloor \frac{n +
+        1}{2} \right\rfloor + \left\lceil \frac{n + 1}{2} \right\rceil \right) \\
+        & = n + 1 + 2\log_2\left( \left\lceil \frac{n + 1}{2} \right\rceil \right)(n + 1) \\
+        & = (n + 1) \left(2\log_2\left( \left\lceil \frac{n + 1}{2} \right\rceil \right) + 1 \right) \\
+        & \leq (n + 1) \left( 2\log_2\left( \frac{2}{3}(n + 1) \right) + 1 \right) \\
+        & = (n + 1) \cdot 2 \log_2(n + 1) - (n + 1) \cdot \log_2\left( \frac{3}{2} \right) + n + 1 \\
+        & \leq 2(n + 1) \log_2(n + 1)
+    \end{aligned}
+    \label{eq:equation22}
+\end{equation}
+
+\subsection{Hvilken slags induktion brugte vi?}\label{subsec:hvilken-slags-induktion-brugte-vi?}
+
+Stærk induktion.
